--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "proengsoft/laravel-jsvalidation": ">2.5.0"
+        "proengsoft/laravel-jsvalidation": ">2.5.0",
+        "realrashid/sweet-alert": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
