Implementação do Auditi + excluir aluno_turma

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "owen-it/laravel-auditing": "^9.3",
         "proengsoft/laravel-jsvalidation": ">2.5.0",
         "realrashid/sweet-alert": "^3.1"
     },
